# DRL_robot_exploration

./: CMakeLists.txt  README.md
saved_networks/cnn_50/: checkpoint  cnn-20000.index  cnn-200000.index  cnn-2000000.index
saved_networks/rnn_50/: checkpoint  rnn-20000.index  rnn-200000.index  rnn-2000000.index
scripts/: Networks.py  action_points.csv  data_set.py  game_dqn_drop.py  game_rnn.py  policy_cnn.py  policy_rnn.py  robot_frontier.py  robot_simulation.py  tf_networks.py  tf_policy_cnn.py  tf_policy_rnn.py  train_cnn.py  train_rnn.py
src/: astar.cpp  inverse_sensor_model.cpp
